--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "@types/html2canvas": "^1.0.0",
     "html2canvas": "^1.4.1",
     "three": "^0.174.0"
   }
